--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldbtest:3307/tpachattest?useSSL=false",
+        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/tpachattest?useSSL=false",
         "spring.datasource.username" : "root",
         "spring.datasource.password" : "123456",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
