--- a/jenkinsfile
+++ b/jenkinsfile
@@ -33,9 +33,8 @@ pipeline {
         }
        stage('nexus_Stage') {
                            	steps{
-                    	   	     sh '''
-                                    mvn clean deploy -Dmaven.test.skip=true
-                                   '''
+                    	   	     sh 'mvn -Dmaven.test.skip=true deploy'
+                                   
 
                     	   	}
 
