--- a/jenkinsfile
+++ b/jenkinsfile
@@ -31,6 +31,14 @@ pipeline {
             }
 
         }
+        stage('sonar') {
+            steps{
+            	 sh '''
+                 mvn sonar:sonar -Dsonar.login=${SONAR_LOGIN} -Dsonar.password=${SONAR_PWD}
+                 '''
+            	 }
+        }
+
        stage('nexus_Stage') {
                            	steps{
                     	   	     sh 'mvn -Dmaven.test.skip=true deploy'
