--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
       - MYSQL_DATABASE=$MYSQLDB_DATABASE
     ports:
-      - $MYSQLDB_DOCKER_PORT:$MYSQLDB_LOCAL_PORT
+      - $MYSQLDB_LOCAL_PORT:$MYSQLDB_LOCAL_PORT
     volumes:
       - db:/var/lib/mysql
 
