--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ server.servlet.context-path=/SpringMVC
 server.port=8089
 ### DATABASE ###
 
-spring.datasource.url=jdbc:mysql://localhost:3306/devops?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/devops?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false&?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=root
 ### JPA / HIBERNATE ###
