--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,13 +16,13 @@ services:
       - db:/var/lib/mysql
 
   angular-app:
-    image: alaabenfradj/frontdevops:latest
+    image: alaabenfradj/front:latest
     depends_on:
       - tpachat
     networks:
       - bored-network
     ports:
-      - 4200:4200
+      - "4200:4200"
 
   tpachat:
     depends_on:
