--- a/jenkinsfile
+++ b/jenkinsfile
@@ -48,7 +48,7 @@ pipeline {
                        }*/
      
 
-  stage('build_push_image') {
+  /*stage('build_push_image') {
 
               steps {
                         script {
@@ -58,7 +58,7 @@ pipeline {
                                //}
                           }
               }
-        }
+        }*/
        
           stage('Docker-compose') {
             steps {
