--- a/jenkinsfile
+++ b/jenkinsfile
@@ -63,7 +63,7 @@ pipeline {
           stage('Docker-compose') {
             steps {
                 echo 'start container'
-                sh 'docker-compose up -d'
+                sh 'docker-compose up'
                
             }
         }
