--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: mysql:5.7
     restart: unless-stopped
     env_file: ./.env
+    networks:
+      - bored-network
     environment:
       - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
       - MYSQL_DATABASE=$MYSQLDB_DATABASE
@@ -15,11 +17,15 @@ services:
   app:
     depends_on:
       - mysqldb
-    build: ./spring-app
+    build:
+      context: .
+      dockerfile: Dockerfile
     restart: on-failure
     env_file: ./.env
     ports:
       - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
+    networks:
+      - bored-network
     environment:
       SPRING_APPLICATION_JSON: '{
         "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
@@ -33,5 +39,10 @@ services:
     stdin_open: true
     tty: true
 
+networks:
+  bored-network:
+    name: bored-network
+
 volumes:
   db:
+  .m2:
