--- a/pom.xml
+++ b/pom.xml
@@ -89,5 +89,10 @@
             </plugin>
 		</plugins>
 	</build>
-
+	<distributionManagement>
+		<repository>
+			<id>deploymentRepo</id>
+			<url>http://192.168.100.4:8081/repository/maven-release/</url>
+		</repository>
+	</distributionManagement>
 </project>
