--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,48 +1,18 @@
-version: "3.8"
-
+version: '3.8'
 services:
   mysqldb:
-    image: mysql:5.7
-    restart: unless-stopped
-    env_file: ./.env
-    networks:
-      - bored-network
+    image: 'mysql:5.7'
     environment:
-      - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
-      - MYSQL_DATABASE=$MYSQLDB_DATABASE
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_PASSWORD=root
+      - MYSQL_DATABASE=tpachato
     ports:
-      - $MYSQLDB_LOCAL_PORT:$MYSQLDB_DOCKER_PORT
-    volumes:
-      - db:/var/lib/mysql
-  app:
-    depends_on:
-      - mysqldb
-    build:
-      context: .
-      dockerfile: Dockerfile
-    restart: on-failure
-    env_file: ./.env
+      - "3307:3306"
+  springboot-docker-container:
+    image: 22653116/devops_cicd:latest
     ports:
-      - $SPRING_LOCAL_PORT:$SPRING_DOCKER_PORT
-    networks:
-      - bored-network
+      - "8089:8089"
     environment:
-      SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
-        "spring.datasource.username" : "$MYSQLDB_USER",
-        "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
-        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
-        "spring.jpa.hibernate.ddl-auto" : "update"
-      }'
-    volumes:
-      - .m2:/root/.m2
-    stdin_open: true
-    tty: true
-
-networks:
-  bored-network:
-    name: bored-network
-
-volumes:
-  db:
-  .m2:
+      SPRING_DATASOURCE_URL: jdbc:mysql://mysqldb:3306/tpachato?autoReconnect=true&useSSL=false
+      SPRING_DATASOURCE_USERNAME: "root"
+      SPRING_DATASOURCE_PASSWORD: "root"
