--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,5 +16,8 @@ services:
       SPRING_DATASOURCE_URL: jdbc:mysql://mysqldb:3306/tpachato?autoReconnect=true&useSSL=false
       SPRING_DATASOURCE_USERNAME: "root"
       SPRING_DATASOURCE_PASSWORD: "root"
+    build:
+      context: "./"
+      dockerfile: "Dockerfile"
     depends_on:
       - mysqldb
