--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,17 +15,17 @@ services:
     volumes:
       - db:/var/lib/mysql
 
-  angular-app:
-    image: alaabenfradj/front:latest
-    container_name: front_c
-    depends_on:
-      - tpachat
-    networks:
-      - bored-network
-    ports:
-      - "4200:4200"
-    volumes:
-      - fv:/var/lib/fv
+      #angular-app:
+      # image: alaabenfradj/front:latest
+      #container_name: front_c
+      #depends_on:
+      # - tpachat
+      #networks:
+      # - bored-network
+      #ports:
+      # - "4200:4200"
+      #volumes:
+      # - fv:/var/lib/fv
 
   tpachat:
     depends_on:
@@ -43,7 +43,7 @@ services:
       - bored-network
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
+        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3310/$MYSQLDB_DATABASE?useSSL=false",
         "spring.datasource.username" : "$MYSQLDB_USER",
         "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
