--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,7 @@
 version: "3.7"
 
 services:
-  mysqldb:
-    image: mysql:5.7
-    restart: unless-stopped
-    container_name: mysqldb
-    networks:
-      - spring-network
-    env_file: ./.env
-    environment:
-      - MYSQL_ROOT_PASSWORD=$MYSQLDB_ROOT_PASSWORD
-      - MYSQL_DATABASE=tpachatdevops
-    ports:
-      - 3306:3306
-    volumes:
-      - db:/var/lib/mysql
+  
   app:
     working_dir: /spring-app
     build:
@@ -24,15 +11,15 @@ services:
     restart: on-failure
     container_name: $SPRING_CONTAINER
     networks:
-      - spring-network
+      - bored-network
     env_file: ./.env
     ports:
       - 8089:8089
     environment:
       SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/tpachatdevops?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false&createDatabaseIfNotExists=true",
+        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/tpachat?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&useSSL=false&createDatabaseIfNotExists=true",
         "spring.datasource.username" : "root",
-        "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
+        "spring.datasource.password" : "123456",
         "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
         "spring.jpa.hibernate.ddl-auto" : "update"
       }'
@@ -43,5 +30,5 @@ services:
 networks:
   spring-network:
     name: spring-network
-volumes:
+volumes: 
   .m2:
