--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <groupId>com.esprit.examen</groupId>
     <artifactId>tpAchatProject</artifactId>
     <name>tpAchatProject</name>
-    <version>1.0-RELEASE</version>
+    <version>1.0-SNAPSHOT</version>
     <description>tpAchatProject</description>
     <modelVersion>4.0.0</modelVersion>
     <distributionManagement>
