--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,22 +2,36 @@ version: '3.8'
 services:
   mysqldb:
     image: 'mysql:5.7'
+    container_name: mysql
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_PASSWORD=root
       - MYSQL_DATABASE=tpachato
     ports:
       - "3307:3306"
+    networks:
+      - AppNet
+
+
   springboot-docker-container:
     image: 22653116/devops_cicd:latest
     ports:
       - "8089:8089"
     environment:
-      SPRING_DATASOURCE_URL: jdbc:mysql://mysqldb:3306/tpachato?autoReconnect=true&useSSL=false
-      SPRING_DATASOURCE_USERNAME: "root"
-      SPRING_DATASOURCE_PASSWORD: "root"
+      SPRING_APPLICATION_JSON: '{
+                  "spring.datasource.url"  : "jdbc:mysql://mysql:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
+                  "spring.datasource.username" : "$MYSQLDB_USER",
+                  "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
+                  "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
+                  "spring.jpa.hibernate.ddl-auto" : "update"
+                }'
     build:
       context: "./"
       dockerfile: "Dockerfile"
     depends_on:
       - mysqldb
+    networks:
+      - AppNet
+
+  networks:
+    AppNet:
