--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,33 @@
-version: '3.8'
+version: '3'
 services:
-  mysqldb:
-    image: 'mysql:5.7'
+  database:
+    image: mysql
     container_name: mysql
     environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_PASSWORD=root
-      - MYSQL_DATABASE=tpachato
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: tpachato
     ports:
-      - "3307:3306"
+      - 3306:3306
     networks:
       - AppNet
 
-
-  springboot-docker-container:
-    image: 22653116/devops_cicd:latest
+  spring-boot:
+    image: hibaef/springprojet
+    container_name: spring
     ports:
-      - "8089:8089"
+      - 8089:8089
+    depends_on:
+      - database
+    networks:
+      - AppNet
+    restart: on-failure
     environment:
       SPRING_APPLICATION_JSON: '{
-                  "spring.datasource.url"  : "jdbc:mysql://mysql:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
-                  "spring.datasource.username" : "$MYSQLDB_USER",
-                  "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
-                  "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
-                  "spring.jpa.hibernate.ddl-auto" : "update"
-                }'
-    build:
-      context: "./"
-      dockerfile: "Dockerfile"
-    depends_on:
-      - mysqldb
-    networks:
-      - AppNet
-
-  networks:
-    AppNet:
+            "spring.datasource.url"  : "jdbc:mysql://mysql:$MYSQLDB_DOCKER_PORT/$MYSQLDB_DATABASE?useSSL=false",
+            "spring.datasource.username" : "$MYSQLDB_USER",
+            "spring.datasource.password" : "$MYSQLDB_ROOT_PASSWORD",
+            "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
+            "spring.jpa.hibernate.ddl-auto" : "update"
+          }'
+networks:
+  AppNet:
